[package]
name = "rutudufd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.6", features=["derive"]}
color-eyre = "0.5"
tracing = "0.1.32"
tracing-appender="0.2.2"
tracing-subscriber = "0.3.9"


[[bin]]
name = "rtdfd"
path = "src/main.rs"
